# Erdos_Finance_LLM_Project

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setuptools-77.0.3-py3-none-any.whl
Notebooks/: SQL_data_manipulation.ipynb  backtest.ipynb  evaluation.ipynb  test_get_news_2.ipynb  test_get_news_api.ipynb  train_PPO_test.ipynb  train_agent.ipynb
config/: predict_stock_w_news.toml  trade_w_llm.toml
dataset/config_archive/: trade_w_llm_copy_2025-04-17_17-00-30.toml  trade_w_llm_copy_2025-04-17_22-45-09.toml
dataset/evaluation/: training_results_20250417_224510.csv  training_results_20250417_224533.csv  training_results_20250417_224639.csv  training_results_20250417_224748.csv  training_results_20250417_224901.csv
dataset/logs/: trade_w_llm_log_2025-04-17_17-00-30.txt  trade_w_llm_log_2025-04-17_22-45-09.txt  training_agent_log_20250417_171958.txt  training_agent_log_20250417_173238.txt  training_agent_log_20250417_174536.txt  training_agent_log_20250417_174606.txt  training_agent_log_20250417_175127.txt  training_agent_log_20250417_220111.txt  training_agent_log_20250417_221006.txt  training_agent_log_20250417_222121.txt
dataset/models/: trading_agent_checkpoint_20250417_224510.pt  trading_agent_checkpoint_20250417_224533.pt  trading_agent_checkpoint_20250417_224639.pt  trading_agent_checkpoint_20250417_224748.pt  trading_agent_checkpoint_20250417_224901.pt  trading_agent_checkpoint_latest.pt
doc/: backgrouds.md
erdos_finance_llm/: test_get_news.ipynb  test_get_news_2.ipynb
src/: predict_stock_w_news.py  trade_w_llm.py  trade_w_llm_new.py
(+31 files in other folders)
