[tool.poetry]
name = "erdosnewsfinanceproject"
version = "0.1.0"
description = ""
authors = ["XW Peng <26990979+xpeng-26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
logging = "^0.4.9.6"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
