[tool.poetry]
name = "erdos_finance_llm"
version = "0.1.0"
description = ""
authors = ["XW Peng <26990979+xpeng-26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
logging = "^0.4.9.6"
datetime = "^5.5"
tomli-w = "^1.2.0"
yfinance = "^0.2.54"
ta-lib = "^0.6.3"
gym = "^0.26.2"
torch = "^2.6.0"
keras = "^3.8.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
gymnasium = "^1.1.1"
torchinfo = "^1.8.0"
joblib = "^1.4.2"
sb3-contrib = "^2.6.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
